--- a/landing/common/base.sass
+++ b/landing/common/base.sass
@@ -93,7 +93,10 @@ section
 	background: #fd84e3
 	&:hover
 		background: #FD9BE8
-
+.here-button.sunyellow
+	background-color: #FCE823
+	&:hover
+		background-color: #FDBF1E
 .here-input
 	display: flex
 	font-family: 'Manrope'
@@ -130,3 +133,6 @@ section
 		z-index: -1
 		left: 88px
 		right: 88px
+
+.full-hide
+	display: none
