--- a/landing/section-main/index.pug
+++ b/landing/section-main/index.pug
@@ -7,6 +7,9 @@ main.main
         h1 !{main.title}
         h3 !{main.subTitle}
         p !{main.textTitle}
+        
+        .main-header-waitlist.waitlist-button
+          a !{waiting.titleMobile}
       .main-header__right
         .main-header__appclip
           p !{main.qrcodeLocale}
