--- a/landing/section-news/index.sass
+++ b/landing/section-news/index.sass
@@ -1,7 +1,7 @@
 .news
     margin: 0
     max-width: 100%
-    background-image: url("/assets/Graphics/pattern.svg")
+    //background-image: url("/assets/Graphics/pattern.svg")
     background-size: cover
     padding: 104px 156px 160px
     @media (max-width: 1160px)
