--- a/landing/waitlist-modal/index.pug
+++ b/landing/waitlist-modal/index.pug
@@ -3,8 +3,8 @@
         button.modal-close 
             img(src="/assets/icons/close.svg")
         
-        h2 Android waiting list
-        p Android version will be released in February. Enter your phone number to get early access
+        h2 Binance waiting list
+        p Binance version will be released in June. Enter your phone number to get early access
         input.here-input(placeholder="Phone number")
         button.here-button Submit
 
