Without FORM and Btn for more item

--- a/landing/header/index.pug
+++ b/landing/header/index.pug
@@ -1,7 +1,7 @@
 mixin header(active, useWhite)
   header.header
     .header-center
-      a(href="/", style="display: flex")
+      a(href="/", style="display: flex").link-logo
         img.header-logo(src='/assets/logo.svg' alt='logo')
       
       .header-links
