Without link "More".

--- a/binance-status/style.sass
+++ b/binance-status/style.sass
@@ -498,7 +498,7 @@ html, body
 			background-position: 50%
 			background-repeat: no-repeat
 			background-size: 100% auto
-.list-block__view .list-block__1
+.list-block__view .list-block__2
 	color: #6B6661
 .list-block__view .list-block__3
 	color: #6B6661
@@ -573,6 +573,9 @@ html, body
 	&__1
 		flex-grow: 1
 		font-weight: 500
+		text-overflow: ellipsis
+		overflow: hidden
+		padding: 0 32px 0 0
 	&__2
 		display: flex
 		align-items: center
