--- a/landing/common/base.sass
+++ b/landing/common/base.sass
@@ -97,7 +97,7 @@ section
 	background-color: #FCE823
 	&:hover
 		background-color: #FDBF1E
-.here-input
+.here-input, .here-input-nick
 	display: flex
 	font-family: 'Manrope'
 	flex-direction: column
@@ -120,7 +120,6 @@ section
 	
 	&::placeholder
 		color: #6B6661
-	
 .page
 	position: relative
 
