--- a/binance-status/index.pug
+++ b/binance-status/index.pug
@@ -26,15 +26,15 @@ html(lang="en")
 				p Only for the first 1000 activations.
 				.header-status__links.desktop-view
 					a(href="https://medium.com/@nearhere/here-binance-connect-and-earn-4-aab88341fe1e").here-button.here-button-orange Learn more
-					.here-button.pink.waitlist-join Join waitlist
+					.here-button.pink.waitlist-button-join Join waitlist
 			.header-status__date.date-block
 				.date-block__top
 					.date-block__column
 						span Accounts with&nbsp;access
-						strong 48
+						strong.ac-withaccess 48
 					.date-block__column
 						span Accounts in&nbsp;waitlist
-						strong 256
+						strong.ac-waitlist 256
 					.date-block__column
 						span Prizes distributed
 						strong $192
@@ -50,7 +50,7 @@ html(lang="en")
 						.timer__items.timer__seconds
 			.header-status__links.mobile-view
 				a(href="https://medium.com/@nearhere/here-binance-connect-and-earn-4-aab88341fe1e").here-button.here-button-orange Learn more
-				.here-button.pink.waitlist-button Join waitlist
+				.here-button.pink.waitlist-button-join Join waitlist
 		.list-block
 			h2 Users with unlocked feature
 			.list-block__table
@@ -62,5 +62,5 @@ html(lang="en")
 
 
 		include ../landing/waitlist-modal/index.pug
-		include ../landing/waitlist-join/index.pug
+		include ./waitlist-join/index.pug
 		script(type="module", src="index.js")
