Coursor, Z-index and Hash

--- a/binance-status/waitlist-join/index.pug
+++ b/binance-status/waitlist-join/index.pug
@@ -15,6 +15,4 @@
 
         img(src="/assets/Graphics/success.png", height="148px")
         p 
-            | Thank you for submitting.
-            br
-            | We will send you a message after the release.
+            | We will notify you once the feature will be unlocked.
