--- a/landing/waitlist-modal/index.sass
+++ b/landing/waitlist-modal/index.sass
@@ -32,7 +32,7 @@
     left: 0
     right: 0
     bottom: 0
-    z-index: 10000
+    z-index: 10005
     padding: 16px
 
     &.open
@@ -91,6 +91,7 @@
     .here-button
         margin-top: 16px
         width: 100%
+        cursor: pointer
 
 #success-modal
     .modal-body
