--- a/binance-status/style.sass
+++ b/binance-status/style.sass
@@ -490,14 +490,15 @@ html, body
 
 	&__4
 		width: 24px
+		height: 24px
+		background-image: url(./images/link.png)
+		background-position: 50%
+		background-repeat: no-repeat
+		background-size: 100% auto
 		a
 			display: block
 			width: 24px
 			height: 24px
-			background-image: url(./images/link.png)
-			background-position: 50%
-			background-repeat: no-repeat
-			background-size: 100% auto
 .list-block__view .list-block__2
 	color: #6B6661
 .list-block__view .list-block__3
@@ -505,9 +506,8 @@ html, body
 	&:after
 		background-image: url(./images/coin-gray.png)
 .list-block__view .list-block__4
-	a
-		background-image: url(./images/link-gray.png)
-		background-size: 21px auto
+	background-image: url(./images/link-gray.png)
+	background-size: 21px auto
 
 
 .nonlist-block
