New URL and some fixed in table

--- a/binance-waitlist/index.pug
+++ b/binance-waitlist/index.pug
@@ -54,11 +54,17 @@ html(lang="en")
 		.list-block
 			h2 Users with unlocked feature
 			.list-block__table
+			span.three-dots
+				span
+			a(href="#").list-block__link.block-link
 		
 
 		.nonlist-block
 			h2 Top 50. 10 to be unlocked.
 			.nonlist-block__table
+			span.three-dots
+				span
+			a(href="#").nonlist-block__link.block-link
 
 
 		include ../landing/waitlist-modal/index.pug
