--- a/binance-waitlist/waitlist-join/index.pug
+++ b/binance-waitlist/waitlist-join/index.pug
@@ -4,8 +4,8 @@
             img(src="/assets/icons/close.svg")
         
         h2 Binance waiting list
-        p Leave your nickname to get early access to Binance connect
-        input.here-input-nick(placeholder="Your nickname")
+        p Leave your near username to get early access to Binance connect
+        input.here-input-nick(placeholder="Near username")
         button.here-button Submit
 
 #success-modal.modal-wrap
