--- a/binance-waitlist/index.pug
+++ b/binance-waitlist/index.pug
@@ -25,7 +25,7 @@ html(lang="en")
 				p Earn 4$ for connect.
 				p Only for the first 1000 activations.
 				.header-status__links.desktop-view
-					a(href="https://medium.com/@nearhere/here-binance-connect-and-earn-4-aab88341fe1e").here-button.here-button-orange Learn more
+					a(href="https://medium.com/@nearhere/here-binance-connect-and-earn-4-aab88341fe1e",target="_blank").here-button.here-button-orange Learn more
 					.here-button.pink.waitlist-button-join Join waitlist
 			.header-status__date.date-block
 				.date-block__top
