Count $ and Replace

--- a/binance-waitlist/index.pug
+++ b/binance-waitlist/index.pug
@@ -31,13 +31,13 @@ html(lang="en")
 				.date-block__top
 					.date-block__column
 						span Accounts with&nbsp;access
-						strong.ac-withaccess 48
+						strong.ac-withaccess
 					.date-block__column
 						span Accounts in&nbsp;waitlist
-						strong.ac-waitlist 256
+						strong.ac-waitlist
 					.date-block__column
 						span Prizes distributed
-						strong $192
+						strong.prizes-distributed $0
 				.date-block__bottom
 					.date-block__timer-text Every 24h we unlock the feature to 10 users
 					.date-block__timer-counter.timer
