Fix Validation and Background-color

--- a/binance-waitlist/style.sass
+++ b/binance-waitlist/style.sass
@@ -399,8 +399,6 @@ html, body
 		margin: 0 20px 8px 0
 		padding: 16px 12px
 		border-radius: 8px
-		background: #EBDEDC
-		border: 1px solid #D9CDCB
 		@media (max-width: 900px)
 			width: calc( 50% - 4px )
 		@media (max-width: 760px)
@@ -417,57 +415,6 @@ html, body
 				margin: 0 0 8px 0
 			@media (max-width: 760px)
 				margin: 0 0 8px 0
-		&:nth-child(1)
-			background-color: #CCDBD8
-			border: 1px solid #087164
-		&:nth-child(2)
-			background-color: #CCDBD8
-			border: 1px solid #087164
-			@media (max-width: 760px)
-				background-color: rgba(2, 88, 247, 0.15)
-				border: 1px solid #0258F7
-		&:nth-child(3)
-			background-color: #CCDBD8
-			border: 1px solid #087164
-			@media (max-width: 760px)
-				background-color: rgba(253, 191, 30, 0.2)
-				border: 1px solid #FDBF1E
-		&:nth-child(4)
-			background-color: rgba(2, 88, 247, 0.15)
-			border: 1px solid #0258F7
-			@media (max-width: 760px)
-				background: #EBDEDC
-				border: 1px solid #D9CDCB
-		&:nth-child(5)
-			background-color: rgba(2, 88, 247, 0.15)
-			border: 1px solid #0258F7
-			@media (max-width: 760px)
-				background: #EBDEDC
-				border: 1px solid #D9CDCB
-		&:nth-child(6)
-			background-color: rgba(2, 88, 247, 0.15)
-			border: 1px solid #0258F7
-			@media (max-width: 760px)
-				background: #EBDEDC
-				border: 1px solid #D9CDCB
-		&:nth-child(7)
-			background-color: rgba(253, 191, 30, 0.2)
-			border: 1px solid #FDBF1E
-			@media (max-width: 760px)
-				background: #EBDEDC
-				border: 1px solid #D9CDCB
-		&:nth-child(8)
-			background-color: rgba(253, 191, 30, 0.2)
-			border: 1px solid #FDBF1E
-			@media (max-width: 760px)
-				background: #EBDEDC
-				border: 1px solid #D9CDCB
-		&:nth-child(9)
-			background-color: rgba(253, 191, 30, 0.2)
-			border: 1px solid #FDBF1E
-			@media (max-width: 760px)
-				background: #EBDEDC
-				border: 1px solid #D9CDCB
 
 	&__1
 		width: 158px
@@ -519,6 +466,12 @@ html, body
 			display: block
 			width: 24px
 			height: 24px
+.list-block__deep
+	background-color: #CCDBD8
+	border: 1px #087164 solid
+.list-block__view
+	background-color: rgba(253,191,30,0.2)
+	border: 1px #FDBF1E solid
 .list-block__view .list-block__2
 	color: #6B6661
 .list-block__view .list-block__3
