--- a/binance-waitlist/style.sass
+++ b/binance-waitlist/style.sass
@@ -478,7 +478,7 @@ html, body
 	color: #6B6661
 	&:after
 		background-image: url(./images/coin-gray.png)
-.list-block__view .list-block__4
+.list-block__view .list-block__4, .list-block__deep .list-block__grey
 	background-image: url(./images/link-gray.png)
 	background-size: 21px auto
 
