disable and hash valid

--- a/landing/common/base.sass
+++ b/landing/common/base.sass
@@ -87,7 +87,10 @@ section
 
 	&:disabled
 		cursor: default
-		background: #f6bf4c
+		background: #CBC6C5
+		box-shadow: 4px 4px 0px #6B6661
+		border: 1px solid #6B6661
+		color: #6B6661
 
 .here-button.pink
 	background: #fd84e3
