--- a/binance-waitlist/index.pug
+++ b/binance-waitlist/index.pug
@@ -17,7 +17,7 @@ html(lang="en")
 		link(href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap", rel="stylesheet")
 	body.white
 		include ../landing/header/index.pug
-		+header("/")
+		+header("/binance-waitlist")
 		
 		.header-status
 			.header-status__title
