--- a/nft/index.pug
+++ b/nft/index.pug
@@ -17,7 +17,7 @@ html(lang="en")
 		link(href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap", rel="stylesheet")
 	body
 		include ../landing/header/index.pug
-		+header("/")
+		+header("/nft")
 		
 		.main-nft.center-block
 			.main-nft-left
