--- a/landing/header/index.pug
+++ b/landing/header/index.pug
@@ -60,7 +60,9 @@ mixin header(active, useWhite)
     .preheader__right.preheader-column
       a(href=common.partnershipLink).partnership !{common.partnership}
       img.preheader_powered-by-near.preheader-logo(src='/assets/powered-by-near.svg' alt='Powered by Near')
-
+.header-note
+  p Join our bi-weekly community call on Saturdays! <a href="#">Click here to join</a>
+  span.header-note__close
 .float-qr
   .qrcode
   p !{floatqr.qrcodeLocale}
