--- a/landing/index.pug
+++ b/landing/index.pug
@@ -35,6 +35,7 @@ html(lang="en")
                 include section-features/index.pug
                 include section-news/index.pug
                 include section-comparison/index.pug
+                include section-howwork/index.pug
                 include section-security/index.pug
                 include section-download/index.pug
                 include section-asks/index.pug
