--- a/landing/index.sass
+++ b/landing/index.sass
@@ -4,6 +4,7 @@
 @import "section-features"
 @import "section-news"
 @import "section-download"
+@import "section-howwork"
 @import "section-asks"
 @import "section-comparison"
 @import "section-security"
