--- a/landing/section-main/index.sass
+++ b/landing/section-main/index.sass
@@ -1,6 +1,6 @@
 body
 	background-image: url(../assets/grid-perspective.svg)
-	background-position: 50% 0
+	background-position: 50% 80px
 	background-repeat: no-repeat
 	@media (max-width: 900px)
 		background-size: 130% auto
