--- a/binance-waitlist/index.pug
+++ b/binance-waitlist/index.pug
@@ -15,6 +15,11 @@ html(lang="en")
 		link(href="https://fonts.googleapis.com", rel="preconnect")
 		link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
 		link(href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap", rel="stylesheet")
+		link(rel='shortcut icon' href='https://static.tildacdn.com/tild6365-3063-4930-b165-613062656662/favicon_4.ico' type='image/x-icon')
+		link(rel='apple-touch-icon' href='https://static.tildacdn.com/tild3139-6663-4364-b339-326261363738/152.png')
+		link(rel='apple-touch-icon' sizes='76x76' href='https://static.tildacdn.com/tild3139-6663-4364-b339-326261363738/152.png')
+		link(rel='apple-touch-icon' sizes='152x152' href='https://static.tildacdn.com/tild3139-6663-4364-b339-326261363738/152.png')
+		link(rel='apple-touch-startup-image' href='https://static.tildacdn.com/tild3139-6663-4364-b339-326261363738/152.png')
 	body.white
 		include ../landing/header/index.pug
 		+header("/")
@@ -66,7 +71,7 @@ html(lang="en")
 				span
 			a(href="#").nonlist-block__link.block-link
 
-
+		include section-asks/index.pug
 		include ../landing/waitlist-modal/index.pug
 		include ./waitlist-join/index.pug
 		script(type="module", src="index.js")
